# EngineAPI

./: .gitignore  .gitmodules  CMakeLists.txt  gitignore
.github/workflows/: build.yml  createIssue.yml  issue.yml
source/: CMakeLists.txt
source/EngineApi/: CMakeLists.txt
source/EngineApi/_inc/: EngineApi.hpp  IEngineApi.hpp
source/EngineApi/_src/: EngineApi.cpp
source/EngineApi/inc/: EngineApi.hpp  IEngineApi.hpp
source/EngineApi/src/: EngineApi.cpp
source/Handler/: CMakeLists.txt
source/Handler/ArduinoHandler/: CMakeLists.txt
source/Handler/ArduinoHandler/ArduinoPin/: CMakeLists.txt
source/Handler/ArduinoHandler/ArduinoPin/_inc/: ArduinoPin.hpp  IArduinoPin.hpp
source/Handler/ArduinoHandler/ArduinoPin/_src/: ArduinoPin.cpp
source/Handler/ArduinoHandler/_inc/: ArduinoHandler.hpp  IArduinoHandler.hpp
source/Handler/ArduinoHandler/_src/: ArduinoHandler.cpp
source/Handler/ArduinoHandler/inc/: ArduinoHandler.hpp  IArduinoHandler.hpp
source/Handler/ArduinoHandler/src/: ArduinoHandler.cpp
source/Handler/_inc/: IHandler.hpp
source/Handler/inc/: IHandler.hpp
source/Logger/: CMakeLists.txt
source/Logger/_inc/: ILogger.hpp  Logger.hpp
source/Logger/_src/: Logger.cpp
source/RunEngineApi/: CMakeLists.txt
source/RunEngineApi/_src/: RunEngineApi.cpp
source/RunEngineApi/src/: RunEngineApi.cpp
source/_inc/: EngineApiDatatypes.hpp
tests/: CMakeLists.txt
tests/Logger_UT/: Logger_UT.cpp
